--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           </div>
         </section>
         <section>
-          <a>Daily</a>
-          <a>Weekly</a>
-          <a>Monthly</a>
+          <a class="links">Daily</a>
+          <a class="links active">Weekly</a>
+          <a class="links">Monthly</a>
         </section>
       </article>
     </section>
